# solitaire-web

./: Cargo.toml  Dockerfile  README.md  compose.yml  index.html
.github/workflows/: build.yml  docker-publish.yml
src/: card.rs  foundation.rs  main.rs  stock_discard.rs  tableau.rs  util.rs
