[package]
name = "solitaire-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "Document", "HtmlCollection", "HtmlElement", "MouseEvent"]}
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"